fix: add bottom padding for contact on mobile version

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -129,7 +129,8 @@ h1 {
   }
 
   .contact p {
-    padding: 16px 0;
+    padding-top: 10px;
+    padding-bottom: 30px;
   }
 }
 
